Microservice with CICD/Iaas/Terraform/modules/sg/main.tf
resource "aws_security_group" "allow-http-traffic-sg" {
  name        = "allow-http-traffic-sg"
  description = "Allow incoming HTTP and HTTPS traffic"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
